v0.11.0/_sources/gallery/maps/choropleth_map.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/maps/choropleth_map.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_maps_choropleth_map.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_maps_choropleth_map.py:


Choropleth map
==============

The :meth:`pygmt.Figure.plot` method allows us to plot geographical data such
as polygons which are stored in a :class:`geopandas.GeoDataFrame` object. Use
:func:`geopandas.read_file` to load data from any supported OGR format such as
a shapefile (.shp), GeoJSON (.geojson), geopackage (.gpkg), etc. You can also
use a full URL pointing to your desired data source. Then, pass the
:class:`geopandas.GeoDataFrame` as an argument to the ``data`` parameter of
:meth:`pygmt.Figure.plot`, and style the geometry using the ``pen`` parameter.
To fill the polygons based on a corresponding column you need to set
``fill="+z"`` as well as select the appropriate column using the ``aspatial``
parameter as shown in the example below.

.. GENERATED FROM PYTHON SOURCE LINES 18-58



.. image-sg:: /gallery/maps/images/sphx_glr_choropleth_map_001.png
   :alt: choropleth map
   :srcset: /gallery/maps/images/sphx_glr_choropleth_map_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import geopandas as gpd
    import pygmt

    # Read polygon data using geopandas
    gdf = gpd.read_file("https://geodacenter.github.io/data-and-lab/data/airbnb.zip")

    fig = pygmt.Figure()

    fig.basemap(
        region=gdf.total_bounds[[0, 2, 1, 3]],
        projection="M6c",
        frame="+tPopulation of Chicago",
    )

    # The dataset contains different attributes, here we select
    # the "population" column to plot.

    # First, we define the colormap to fill the polygons based on
    # the "population" column.
    pygmt.makecpt(
        cmap="acton",
        series=[gdf["population"].min(), gdf["population"].max(), 10],
        continuous=True,
        reverse=True,
    )

    # Next, we plot the polygons and fill them using the defined colormap.
    # The target column is defined by the aspatial parameter.
    fig.plot(
        data=gdf,
        pen="0.3p,gray10",
        fill="+z",
        cmap=True,
        aspatial="Z=population",
    )

    # Add colorbar legend
    fig.colorbar(frame="x+lPopulation", position="jML+o-0.5c+w3.5c/0.2c")

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.782 seconds)


.. _sphx_glr_download_gallery_maps_choropleth_map.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: choropleth_map.ipynb <choropleth_map.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: choropleth_map.py <choropleth_map.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
